StockQuoteObservable-ThreadSafe-OpenCall-ConcurrentLinkedQueue-Updated